kustomize/service1/srv1-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  labels:
    App: service1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      App: service1
  strategy: {}
  template:
    metadata:
      name: service1
      labels:
        App: service1
    spec:
      containers:
        - image: 851725552187.dkr.ecr.eu-west-1.amazonaws.com/service1_arik:0.0.1
          imagePullPolicy: "Always"
          name: service1
          ports:
            - containerPort: 3000
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
