kustomize/service1/srv1-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: NodePort
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    App: service1
status:
  loadBalancer: {}
