kustomize/service1/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: srv1-ingress
  namespace: service1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 25m
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - srv1-arik.chene-factory.com 
      secretName: letsencrypt
  rules:
    - host: srv1-arik.chene-factory.com 
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 3000
